fix code style violations in tests and 1 code smell in the SemesterControllerTest